--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "server-node",
+  "name": "nlw-unite-nodejs",
   "version": "1.0.0",
   "description": "O pass.in é uma aplicação de **gestão de participantes em eventos presenciais**.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts"
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "build": "tsup src --format esm",
+    "start": "node dist/server.mjs",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neanderdev/nlw-unite-nodejs.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/neanderdev/nlw-unite-nodejs/issues"
+  },
+  "homepage": "https://github.com/neanderdev/nlw-unite-nodejs#readme",
   "devDependencies": {
-    "@types/node": "20.11.30",
-    "prisma": "5.11.0",
-    "tsx": "4.7.1",
-    "typescript": "5.4.3"
+    "@types/node": "^20.12.2",
+    "prisma": "^5.12.0",
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@prisma/client": "5.11.0",
-    "fastify": "4.26.2",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
+    "@prisma/client": "^5.12.0",
+    "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.4"
   }
